Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     vars -> VAR var_list
Rule 2     var_list -> id_list COLON type SEMI_COLON var_list_prime
Rule 3     var_list_prime -> var_list
Rule 4     var_list_prime -> empty
Rule 5     id_list -> ID id_list_prime
Rule 6     id_list_prime -> COMMA id_list
Rule 7     id_list_prime -> empty
Rule 8     exp -> exp PLUS termino
Rule 9     exp -> exp MINUS termino
Rule 10    exp -> termino
Rule 11    termino -> termino ASTERISK factor
Rule 12    termino -> termino FORWARD_SLASH factor
Rule 13    termino -> factor
Rule 14    type -> INT
Rule 15    type -> FLOAT
Rule 16    empty -> <empty>
Rule 17    cte -> CNT_INT
Rule 18    cte -> CNT_FLOAT
Rule 19    expression -> exp expression_prime
Rule 20    expression_prime -> GREATER_THAN exp
Rule 21    expression_prime -> LOWER_THAN exp
Rule 22    expression_prime -> NOT_EQUAL exp
Rule 23    expression_prime -> empty
Rule 24    f_call -> ID L_PARENTHESIS R_PARENTHESIS SEMI_COLON
Rule 25    f_call -> ID L_PARENTHESIS expression_list R_PARENTHESIS SEMI_COLON
Rule 26    expression_list -> expression expression_list_prime
Rule 27    expression_list_prime -> COMMA expression_list
Rule 28    expression_list_prime -> empty
Rule 29    body -> L_CBRACKET R_CBRACKET
Rule 30    body -> L_CBRACKET statement_list R_CBRACKET
Rule 31    statement_list -> statement statement_list_prime
Rule 32    statement_list_prime -> statement_list
Rule 33    statement_list_prime -> empty
Rule 34    statement -> assign
Rule 35    statement -> condition
Rule 36    statement -> cycle
Rule 37    statement -> f_call
Rule 38    statement -> print_stmt
Rule 39    condition -> IF L_PARENTHESIS expression R_PARENTHESIS body SEMI_COLON
Rule 40    condition -> IF L_PARENTHESIS expression R_PARENTHESIS body ELSE body SEMI_COLON
Rule 41    cycle -> WHILE L_PARENTHESIS expression R_PARENTHESIS DO body SEMI_COLON
Rule 42    print_stmt -> PRINT L_PARENTHESIS print_expression_list R_PARENTHESIS SEMI_COLON
Rule 43    print_expression_list -> expression print_expression_list_prime
Rule 44    print_expression_list -> CNT_STRING print_expression_list_prime
Rule 45    print_expression_list_prime -> COMMA print_expression_list
Rule 46    print_expression_list_prime -> empty
Rule 47    factor -> L_PARENTHESIS expression R_PARENTHESIS
Rule 48    factor -> PLUS ID
Rule 49    factor -> PLUS cte
Rule 50    factor -> MINUS ID
Rule 51    factor -> MINUS cte
Rule 52    factor -> ID
Rule 53    factor -> cte
Rule 54    funcs -> VOID ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
Rule 55    funcs -> VOID ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
Rule 56    funcs -> VOID ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
Rule 57    funcs -> VOID ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
Rule 58    param_list -> ID COLON type param_list_prime
Rule 59    param_list_prime -> COMMA param_list
Rule 60    param_list_prime -> empty
Rule 61    program -> PROGRAM ID SEMI_COLON vars func_list MAIN body END
Rule 62    program -> PROGRAM ID SEMI_COLON func_list MAIN body END
Rule 63    program -> PROGRAM ID SEMI_COLON vars MAIN body END
Rule 64    program -> PROGRAM ID SEMI_COLON MAIN body END
Rule 65    func_list -> funcs func_list_prime
Rule 66    func_list_prime -> func_list
Rule 67    func_list_prime -> empty
Rule 68    assign -> ID EQUAL expression SEMI_COLON

Terminals, with rules where they appear

ASTERISK             : 11
CNT_FLOAT            : 18
CNT_INT              : 17
CNT_STRING           : 44
COLON                : 2 58
COMMA                : 6 27 45 59
DO                   : 41
ELSE                 : 40
END                  : 61 62 63 64
EQUAL                : 68
FLOAT                : 15
FORWARD_SLASH        : 12
GREATER_THAN         : 20
ID                   : 5 24 25 48 50 52 54 55 56 57 58 61 62 63 64 68
IF                   : 39 40
INT                  : 14
LOWER_THAN           : 21
L_CBRACKET           : 29 30
L_PARENTHESIS        : 24 25 39 40 41 42 47 54 55 56 57
L_SBRACKET           : 54 55 56 57
MAIN                 : 61 62 63 64
MINUS                : 9 50 51
NOT_EQUAL            : 22
PLUS                 : 8 48 49
PRINT                : 42
PROGRAM              : 61 62 63 64
R_CBRACKET           : 29 30
R_PARENTHESIS        : 24 25 39 40 41 42 47 54 55 56 57
R_SBRACKET           : 54 55 56 57
SEMI_COLON           : 2 24 25 39 40 41 42 54 55 56 57 61 62 63 64 68
VAR                  : 1
VOID                 : 54 55 56 57
WHILE                : 41
error                : 

Nonterminals, with rules where they appear

assign               : 34
body                 : 39 40 40 41 54 55 56 57 61 62 63 64
condition            : 35
cte                  : 49 51 53
cycle                : 36
empty                : 4 7 23 28 33 46 60 67
exp                  : 8 9 19 20 21 22
expression           : 26 39 40 41 43 47 68
expression_list      : 25 27
expression_list_prime : 26
expression_prime     : 19
f_call               : 37
factor               : 11 12 13
func_list            : 61 62 66
func_list_prime      : 65
funcs                : 65
id_list              : 2 6
id_list_prime        : 5
param_list           : 54 55 59
param_list_prime     : 58
print_expression_list : 42 45
print_expression_list_prime : 43 44
print_stmt           : 38
program              : 0
statement            : 31
statement_list       : 30 32
statement_list_prime : 31
termino              : 8 9 10 11 12
type                 : 2 58
var_list             : 1 3
var_list_prime       : 2
vars                 : 54 56 61 63

Parsing method: LALR

state 0

    (0) S' -> . program
    (61) program -> . PROGRAM ID SEMI_COLON vars func_list MAIN body END
    (62) program -> . PROGRAM ID SEMI_COLON func_list MAIN body END
    (63) program -> . PROGRAM ID SEMI_COLON vars MAIN body END
    (64) program -> . PROGRAM ID SEMI_COLON MAIN body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (61) program -> PROGRAM . ID SEMI_COLON vars func_list MAIN body END
    (62) program -> PROGRAM . ID SEMI_COLON func_list MAIN body END
    (63) program -> PROGRAM . ID SEMI_COLON vars MAIN body END
    (64) program -> PROGRAM . ID SEMI_COLON MAIN body END

    ID              shift and go to state 3


state 3

    (61) program -> PROGRAM ID . SEMI_COLON vars func_list MAIN body END
    (62) program -> PROGRAM ID . SEMI_COLON func_list MAIN body END
    (63) program -> PROGRAM ID . SEMI_COLON vars MAIN body END
    (64) program -> PROGRAM ID . SEMI_COLON MAIN body END

    SEMI_COLON      shift and go to state 4


state 4

    (61) program -> PROGRAM ID SEMI_COLON . vars func_list MAIN body END
    (62) program -> PROGRAM ID SEMI_COLON . func_list MAIN body END
    (63) program -> PROGRAM ID SEMI_COLON . vars MAIN body END
    (64) program -> PROGRAM ID SEMI_COLON . MAIN body END
    (1) vars -> . VAR var_list
    (65) func_list -> . funcs func_list_prime
    (54) funcs -> . VOID ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (55) funcs -> . VOID ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
    (56) funcs -> . VOID ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (57) funcs -> . VOID ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON

    MAIN            shift and go to state 7
    VAR             shift and go to state 8
    VOID            shift and go to state 10

    vars                           shift and go to state 5
    func_list                      shift and go to state 6
    funcs                          shift and go to state 9

state 5

    (61) program -> PROGRAM ID SEMI_COLON vars . func_list MAIN body END
    (63) program -> PROGRAM ID SEMI_COLON vars . MAIN body END
    (65) func_list -> . funcs func_list_prime
    (54) funcs -> . VOID ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (55) funcs -> . VOID ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
    (56) funcs -> . VOID ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (57) funcs -> . VOID ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON

    MAIN            shift and go to state 12
    VOID            shift and go to state 10

    func_list                      shift and go to state 11
    funcs                          shift and go to state 9

state 6

    (62) program -> PROGRAM ID SEMI_COLON func_list . MAIN body END

    MAIN            shift and go to state 13


state 7

    (64) program -> PROGRAM ID SEMI_COLON MAIN . body END
    (29) body -> . L_CBRACKET R_CBRACKET
    (30) body -> . L_CBRACKET statement_list R_CBRACKET

    L_CBRACKET      shift and go to state 15

    body                           shift and go to state 14

state 8

    (1) vars -> VAR . var_list
    (2) var_list -> . id_list COLON type SEMI_COLON var_list_prime
    (5) id_list -> . ID id_list_prime

    ID              shift and go to state 18

    var_list                       shift and go to state 16
    id_list                        shift and go to state 17

state 9

    (65) func_list -> funcs . func_list_prime
    (66) func_list_prime -> . func_list
    (67) func_list_prime -> . empty
    (65) func_list -> . funcs func_list_prime
    (16) empty -> .
    (54) funcs -> . VOID ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (55) funcs -> . VOID ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
    (56) funcs -> . VOID ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (57) funcs -> . VOID ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON

    MAIN            reduce using rule 16 (empty -> .)
    VOID            shift and go to state 10

    funcs                          shift and go to state 9
    func_list_prime                shift and go to state 19
    func_list                      shift and go to state 20
    empty                          shift and go to state 21

state 10

    (54) funcs -> VOID . ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (55) funcs -> VOID . ID L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
    (56) funcs -> VOID . ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (57) funcs -> VOID . ID L_PARENTHESIS R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON

    ID              shift and go to state 22


state 11

    (61) program -> PROGRAM ID SEMI_COLON vars func_list . MAIN body END

    MAIN            shift and go to state 23


state 12

    (63) program -> PROGRAM ID SEMI_COLON vars MAIN . body END
    (29) body -> . L_CBRACKET R_CBRACKET
    (30) body -> . L_CBRACKET statement_list R_CBRACKET

    L_CBRACKET      shift and go to state 15

    body                           shift and go to state 24

state 13

    (62) program -> PROGRAM ID SEMI_COLON func_list MAIN . body END
    (29) body -> . L_CBRACKET R_CBRACKET
    (30) body -> . L_CBRACKET statement_list R_CBRACKET

    L_CBRACKET      shift and go to state 15

    body                           shift and go to state 25

state 14

    (64) program -> PROGRAM ID SEMI_COLON MAIN body . END

    END             shift and go to state 26


state 15

    (29) body -> L_CBRACKET . R_CBRACKET
    (30) body -> L_CBRACKET . statement_list R_CBRACKET
    (31) statement_list -> . statement statement_list_prime
    (34) statement -> . assign
    (35) statement -> . condition
    (36) statement -> . cycle
    (37) statement -> . f_call
    (38) statement -> . print_stmt
    (68) assign -> . ID EQUAL expression SEMI_COLON
    (39) condition -> . IF L_PARENTHESIS expression R_PARENTHESIS body SEMI_COLON
    (40) condition -> . IF L_PARENTHESIS expression R_PARENTHESIS body ELSE body SEMI_COLON
    (41) cycle -> . WHILE L_PARENTHESIS expression R_PARENTHESIS DO body SEMI_COLON
    (24) f_call -> . ID L_PARENTHESIS R_PARENTHESIS SEMI_COLON
    (25) f_call -> . ID L_PARENTHESIS expression_list R_PARENTHESIS SEMI_COLON
    (42) print_stmt -> . PRINT L_PARENTHESIS print_expression_list R_PARENTHESIS SEMI_COLON

    R_CBRACKET      shift and go to state 27
    ID              shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    PRINT           shift and go to state 38

    statement_list                 shift and go to state 28
    statement                      shift and go to state 29
    assign                         shift and go to state 30
    condition                      shift and go to state 31
    cycle                          shift and go to state 32
    f_call                         shift and go to state 33
    print_stmt                     shift and go to state 34

state 16

    (1) vars -> VAR var_list .

    MAIN            reduce using rule 1 (vars -> VAR var_list .)
    VOID            reduce using rule 1 (vars -> VAR var_list .)
    L_CBRACKET      reduce using rule 1 (vars -> VAR var_list .)


state 17

    (2) var_list -> id_list . COLON type SEMI_COLON var_list_prime

    COLON           shift and go to state 39


state 18

    (5) id_list -> ID . id_list_prime
    (6) id_list_prime -> . COMMA id_list
    (7) id_list_prime -> . empty
    (16) empty -> .

    COMMA           shift and go to state 41
    COLON           reduce using rule 16 (empty -> .)

    id_list_prime                  shift and go to state 40
    empty                          shift and go to state 42

state 19

    (65) func_list -> funcs func_list_prime .

    MAIN            reduce using rule 65 (func_list -> funcs func_list_prime .)


state 20

    (66) func_list_prime -> func_list .

    MAIN            reduce using rule 66 (func_list_prime -> func_list .)


state 21

    (67) func_list_prime -> empty .

    MAIN            reduce using rule 67 (func_list_prime -> empty .)


state 22

    (54) funcs -> VOID ID . L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (55) funcs -> VOID ID . L_PARENTHESIS param_list R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
    (56) funcs -> VOID ID . L_PARENTHESIS R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (57) funcs -> VOID ID . L_PARENTHESIS R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON

    L_PARENTHESIS   shift and go to state 43


state 23

    (61) program -> PROGRAM ID SEMI_COLON vars func_list MAIN . body END
    (29) body -> . L_CBRACKET R_CBRACKET
    (30) body -> . L_CBRACKET statement_list R_CBRACKET

    L_CBRACKET      shift and go to state 15

    body                           shift and go to state 44

state 24

    (63) program -> PROGRAM ID SEMI_COLON vars MAIN body . END

    END             shift and go to state 45


state 25

    (62) program -> PROGRAM ID SEMI_COLON func_list MAIN body . END

    END             shift and go to state 46


state 26

    (64) program -> PROGRAM ID SEMI_COLON MAIN body END .

    $end            reduce using rule 64 (program -> PROGRAM ID SEMI_COLON MAIN body END .)


state 27

    (29) body -> L_CBRACKET R_CBRACKET .

    END             reduce using rule 29 (body -> L_CBRACKET R_CBRACKET .)
    R_SBRACKET      reduce using rule 29 (body -> L_CBRACKET R_CBRACKET .)
    SEMI_COLON      reduce using rule 29 (body -> L_CBRACKET R_CBRACKET .)
    ELSE            reduce using rule 29 (body -> L_CBRACKET R_CBRACKET .)


state 28

    (30) body -> L_CBRACKET statement_list . R_CBRACKET

    R_CBRACKET      shift and go to state 47


state 29

    (31) statement_list -> statement . statement_list_prime
    (32) statement_list_prime -> . statement_list
    (33) statement_list_prime -> . empty
    (31) statement_list -> . statement statement_list_prime
    (16) empty -> .
    (34) statement -> . assign
    (35) statement -> . condition
    (36) statement -> . cycle
    (37) statement -> . f_call
    (38) statement -> . print_stmt
    (68) assign -> . ID EQUAL expression SEMI_COLON
    (39) condition -> . IF L_PARENTHESIS expression R_PARENTHESIS body SEMI_COLON
    (40) condition -> . IF L_PARENTHESIS expression R_PARENTHESIS body ELSE body SEMI_COLON
    (41) cycle -> . WHILE L_PARENTHESIS expression R_PARENTHESIS DO body SEMI_COLON
    (24) f_call -> . ID L_PARENTHESIS R_PARENTHESIS SEMI_COLON
    (25) f_call -> . ID L_PARENTHESIS expression_list R_PARENTHESIS SEMI_COLON
    (42) print_stmt -> . PRINT L_PARENTHESIS print_expression_list R_PARENTHESIS SEMI_COLON

    R_CBRACKET      reduce using rule 16 (empty -> .)
    ID              shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    PRINT           shift and go to state 38

    statement                      shift and go to state 29
    statement_list_prime           shift and go to state 48
    statement_list                 shift and go to state 49
    empty                          shift and go to state 50
    assign                         shift and go to state 30
    condition                      shift and go to state 31
    cycle                          shift and go to state 32
    f_call                         shift and go to state 33
    print_stmt                     shift and go to state 34

state 30

    (34) statement -> assign .

    ID              reduce using rule 34 (statement -> assign .)
    IF              reduce using rule 34 (statement -> assign .)
    WHILE           reduce using rule 34 (statement -> assign .)
    PRINT           reduce using rule 34 (statement -> assign .)
    R_CBRACKET      reduce using rule 34 (statement -> assign .)


state 31

    (35) statement -> condition .

    ID              reduce using rule 35 (statement -> condition .)
    IF              reduce using rule 35 (statement -> condition .)
    WHILE           reduce using rule 35 (statement -> condition .)
    PRINT           reduce using rule 35 (statement -> condition .)
    R_CBRACKET      reduce using rule 35 (statement -> condition .)


state 32

    (36) statement -> cycle .

    ID              reduce using rule 36 (statement -> cycle .)
    IF              reduce using rule 36 (statement -> cycle .)
    WHILE           reduce using rule 36 (statement -> cycle .)
    PRINT           reduce using rule 36 (statement -> cycle .)
    R_CBRACKET      reduce using rule 36 (statement -> cycle .)


state 33

    (37) statement -> f_call .

    ID              reduce using rule 37 (statement -> f_call .)
    IF              reduce using rule 37 (statement -> f_call .)
    WHILE           reduce using rule 37 (statement -> f_call .)
    PRINT           reduce using rule 37 (statement -> f_call .)
    R_CBRACKET      reduce using rule 37 (statement -> f_call .)


state 34

    (38) statement -> print_stmt .

    ID              reduce using rule 38 (statement -> print_stmt .)
    IF              reduce using rule 38 (statement -> print_stmt .)
    WHILE           reduce using rule 38 (statement -> print_stmt .)
    PRINT           reduce using rule 38 (statement -> print_stmt .)
    R_CBRACKET      reduce using rule 38 (statement -> print_stmt .)


state 35

    (68) assign -> ID . EQUAL expression SEMI_COLON
    (24) f_call -> ID . L_PARENTHESIS R_PARENTHESIS SEMI_COLON
    (25) f_call -> ID . L_PARENTHESIS expression_list R_PARENTHESIS SEMI_COLON

    EQUAL           shift and go to state 51
    L_PARENTHESIS   shift and go to state 52


state 36

    (39) condition -> IF . L_PARENTHESIS expression R_PARENTHESIS body SEMI_COLON
    (40) condition -> IF . L_PARENTHESIS expression R_PARENTHESIS body ELSE body SEMI_COLON

    L_PARENTHESIS   shift and go to state 53


state 37

    (41) cycle -> WHILE . L_PARENTHESIS expression R_PARENTHESIS DO body SEMI_COLON

    L_PARENTHESIS   shift and go to state 54


state 38

    (42) print_stmt -> PRINT . L_PARENTHESIS print_expression_list R_PARENTHESIS SEMI_COLON

    L_PARENTHESIS   shift and go to state 55


state 39

    (2) var_list -> id_list COLON . type SEMI_COLON var_list_prime
    (14) type -> . INT
    (15) type -> . FLOAT

    INT             shift and go to state 57
    FLOAT           shift and go to state 58

    type                           shift and go to state 56

state 40

    (5) id_list -> ID id_list_prime .

    COLON           reduce using rule 5 (id_list -> ID id_list_prime .)


state 41

    (6) id_list_prime -> COMMA . id_list
    (5) id_list -> . ID id_list_prime

    ID              shift and go to state 18

    id_list                        shift and go to state 59

state 42

    (7) id_list_prime -> empty .

    COLON           reduce using rule 7 (id_list_prime -> empty .)


state 43

    (54) funcs -> VOID ID L_PARENTHESIS . param_list R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (55) funcs -> VOID ID L_PARENTHESIS . param_list R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
    (56) funcs -> VOID ID L_PARENTHESIS . R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (57) funcs -> VOID ID L_PARENTHESIS . R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON
    (58) param_list -> . ID COLON type param_list_prime

    R_PARENTHESIS   shift and go to state 62
    ID              shift and go to state 60

    param_list                     shift and go to state 61

state 44

    (61) program -> PROGRAM ID SEMI_COLON vars func_list MAIN body . END

    END             shift and go to state 63


state 45

    (63) program -> PROGRAM ID SEMI_COLON vars MAIN body END .

    $end            reduce using rule 63 (program -> PROGRAM ID SEMI_COLON vars MAIN body END .)


state 46

    (62) program -> PROGRAM ID SEMI_COLON func_list MAIN body END .

    $end            reduce using rule 62 (program -> PROGRAM ID SEMI_COLON func_list MAIN body END .)


state 47

    (30) body -> L_CBRACKET statement_list R_CBRACKET .

    END             reduce using rule 30 (body -> L_CBRACKET statement_list R_CBRACKET .)
    R_SBRACKET      reduce using rule 30 (body -> L_CBRACKET statement_list R_CBRACKET .)
    SEMI_COLON      reduce using rule 30 (body -> L_CBRACKET statement_list R_CBRACKET .)
    ELSE            reduce using rule 30 (body -> L_CBRACKET statement_list R_CBRACKET .)


state 48

    (31) statement_list -> statement statement_list_prime .

    R_CBRACKET      reduce using rule 31 (statement_list -> statement statement_list_prime .)


state 49

    (32) statement_list_prime -> statement_list .

    R_CBRACKET      reduce using rule 32 (statement_list_prime -> statement_list .)


state 50

    (33) statement_list_prime -> empty .

    R_CBRACKET      reduce using rule 33 (statement_list_prime -> empty .)


state 51

    (68) assign -> ID EQUAL . expression SEMI_COLON
    (19) expression -> . exp expression_prime
    (8) exp -> . exp PLUS termino
    (9) exp -> . exp MINUS termino
    (10) exp -> . termino
    (11) termino -> . termino ASTERISK factor
    (12) termino -> . termino FORWARD_SLASH factor
    (13) termino -> . factor
    (47) factor -> . L_PARENTHESIS expression R_PARENTHESIS
    (48) factor -> . PLUS ID
    (49) factor -> . PLUS cte
    (50) factor -> . MINUS ID
    (51) factor -> . MINUS cte
    (52) factor -> . ID
    (53) factor -> . cte
    (17) cte -> . CNT_INT
    (18) cte -> . CNT_FLOAT

    L_PARENTHESIS   shift and go to state 71
    PLUS            shift and go to state 67
    MINUS           shift and go to state 69
    ID              shift and go to state 64
    CNT_INT         shift and go to state 73
    CNT_FLOAT       shift and go to state 74

    expression                     shift and go to state 65
    exp                            shift and go to state 66
    termino                        shift and go to state 68
    factor                         shift and go to state 70
    cte                            shift and go to state 72

state 52

    (24) f_call -> ID L_PARENTHESIS . R_PARENTHESIS SEMI_COLON
    (25) f_call -> ID L_PARENTHESIS . expression_list R_PARENTHESIS SEMI_COLON
    (26) expression_list -> . expression expression_list_prime
    (19) expression -> . exp expression_prime
    (8) exp -> . exp PLUS termino
    (9) exp -> . exp MINUS termino
    (10) exp -> . termino
    (11) termino -> . termino ASTERISK factor
    (12) termino -> . termino FORWARD_SLASH factor
    (13) termino -> . factor
    (47) factor -> . L_PARENTHESIS expression R_PARENTHESIS
    (48) factor -> . PLUS ID
    (49) factor -> . PLUS cte
    (50) factor -> . MINUS ID
    (51) factor -> . MINUS cte
    (52) factor -> . ID
    (53) factor -> . cte
    (17) cte -> . CNT_INT
    (18) cte -> . CNT_FLOAT

    R_PARENTHESIS   shift and go to state 75
    L_PARENTHESIS   shift and go to state 71
    PLUS            shift and go to state 67
    MINUS           shift and go to state 69
    ID              shift and go to state 64
    CNT_INT         shift and go to state 73
    CNT_FLOAT       shift and go to state 74

    expression_list                shift and go to state 76
    expression                     shift and go to state 77
    exp                            shift and go to state 66
    termino                        shift and go to state 68
    factor                         shift and go to state 70
    cte                            shift and go to state 72

state 53

    (39) condition -> IF L_PARENTHESIS . expression R_PARENTHESIS body SEMI_COLON
    (40) condition -> IF L_PARENTHESIS . expression R_PARENTHESIS body ELSE body SEMI_COLON
    (19) expression -> . exp expression_prime
    (8) exp -> . exp PLUS termino
    (9) exp -> . exp MINUS termino
    (10) exp -> . termino
    (11) termino -> . termino ASTERISK factor
    (12) termino -> . termino FORWARD_SLASH factor
    (13) termino -> . factor
    (47) factor -> . L_PARENTHESIS expression R_PARENTHESIS
    (48) factor -> . PLUS ID
    (49) factor -> . PLUS cte
    (50) factor -> . MINUS ID
    (51) factor -> . MINUS cte
    (52) factor -> . ID
    (53) factor -> . cte
    (17) cte -> . CNT_INT
    (18) cte -> . CNT_FLOAT

    L_PARENTHESIS   shift and go to state 71
    PLUS            shift and go to state 67
    MINUS           shift and go to state 69
    ID              shift and go to state 64
    CNT_INT         shift and go to state 73
    CNT_FLOAT       shift and go to state 74

    expression                     shift and go to state 78
    exp                            shift and go to state 66
    termino                        shift and go to state 68
    factor                         shift and go to state 70
    cte                            shift and go to state 72

state 54

    (41) cycle -> WHILE L_PARENTHESIS . expression R_PARENTHESIS DO body SEMI_COLON
    (19) expression -> . exp expression_prime
    (8) exp -> . exp PLUS termino
    (9) exp -> . exp MINUS termino
    (10) exp -> . termino
    (11) termino -> . termino ASTERISK factor
    (12) termino -> . termino FORWARD_SLASH factor
    (13) termino -> . factor
    (47) factor -> . L_PARENTHESIS expression R_PARENTHESIS
    (48) factor -> . PLUS ID
    (49) factor -> . PLUS cte
    (50) factor -> . MINUS ID
    (51) factor -> . MINUS cte
    (52) factor -> . ID
    (53) factor -> . cte
    (17) cte -> . CNT_INT
    (18) cte -> . CNT_FLOAT

    L_PARENTHESIS   shift and go to state 71
    PLUS            shift and go to state 67
    MINUS           shift and go to state 69
    ID              shift and go to state 64
    CNT_INT         shift and go to state 73
    CNT_FLOAT       shift and go to state 74

    expression                     shift and go to state 79
    exp                            shift and go to state 66
    termino                        shift and go to state 68
    factor                         shift and go to state 70
    cte                            shift and go to state 72

state 55

    (42) print_stmt -> PRINT L_PARENTHESIS . print_expression_list R_PARENTHESIS SEMI_COLON
    (43) print_expression_list -> . expression print_expression_list_prime
    (44) print_expression_list -> . CNT_STRING print_expression_list_prime
    (19) expression -> . exp expression_prime
    (8) exp -> . exp PLUS termino
    (9) exp -> . exp MINUS termino
    (10) exp -> . termino
    (11) termino -> . termino ASTERISK factor
    (12) termino -> . termino FORWARD_SLASH factor
    (13) termino -> . factor
    (47) factor -> . L_PARENTHESIS expression R_PARENTHESIS
    (48) factor -> . PLUS ID
    (49) factor -> . PLUS cte
    (50) factor -> . MINUS ID
    (51) factor -> . MINUS cte
    (52) factor -> . ID
    (53) factor -> . cte
    (17) cte -> . CNT_INT
    (18) cte -> . CNT_FLOAT

    CNT_STRING      shift and go to state 82
    L_PARENTHESIS   shift and go to state 71
    PLUS            shift and go to state 67
    MINUS           shift and go to state 69
    ID              shift and go to state 64
    CNT_INT         shift and go to state 73
    CNT_FLOAT       shift and go to state 74

    print_expression_list          shift and go to state 80
    expression                     shift and go to state 81
    exp                            shift and go to state 66
    termino                        shift and go to state 68
    factor                         shift and go to state 70
    cte                            shift and go to state 72

state 56

    (2) var_list -> id_list COLON type . SEMI_COLON var_list_prime

    SEMI_COLON      shift and go to state 83


state 57

    (14) type -> INT .

    SEMI_COLON      reduce using rule 14 (type -> INT .)
    COMMA           reduce using rule 14 (type -> INT .)
    R_PARENTHESIS   reduce using rule 14 (type -> INT .)


state 58

    (15) type -> FLOAT .

    SEMI_COLON      reduce using rule 15 (type -> FLOAT .)
    COMMA           reduce using rule 15 (type -> FLOAT .)
    R_PARENTHESIS   reduce using rule 15 (type -> FLOAT .)


state 59

    (6) id_list_prime -> COMMA id_list .

    COLON           reduce using rule 6 (id_list_prime -> COMMA id_list .)


state 60

    (58) param_list -> ID . COLON type param_list_prime

    COLON           shift and go to state 84


state 61

    (54) funcs -> VOID ID L_PARENTHESIS param_list . R_PARENTHESIS L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (55) funcs -> VOID ID L_PARENTHESIS param_list . R_PARENTHESIS L_SBRACKET body R_SBRACKET SEMI_COLON

    R_PARENTHESIS   shift and go to state 85


state 62

    (56) funcs -> VOID ID L_PARENTHESIS R_PARENTHESIS . L_SBRACKET vars body R_SBRACKET SEMI_COLON
    (57) funcs -> VOID ID L_PARENTHESIS R_PARENTHESIS . L_SBRACKET body R_SBRACKET SEMI_COLON

    L_SBRACKET      shift and go to state 86


state 63

    (61) program -> PROGRAM ID SEMI_COLON vars func_list MAIN body END .

    $end            reduce using rule 61 (program -> PROGRAM ID SEMI_COLON vars func_list MAIN body END .)


state 64

    (52) factor -> ID .

    ASTERISK        reduce using rule 52 (factor -> ID .)
    FORWARD_SLASH   reduce using rule 52 (factor -> ID .)
    PLUS            reduce using rule 52 (factor -> ID .)
    MINUS           reduce using rule 52 (factor -> ID .)
    GREATER_THAN    reduce using rule 52 (factor -> ID .)
    LOWER_THAN      reduce using rule 52 (factor -> ID .)
    NOT_EQUAL       reduce using rule 52 (factor -> ID .)
    SEMI_COLON      reduce using rule 52 (factor -> ID .)
    COMMA           reduce using rule 52 (factor -> ID .)
    R_PARENTHESIS   reduce using rule 52 (factor -> ID .)


state 65

    (68) assign -> ID EQUAL expression . SEMI_COLON

    SEMI_COLON      shift and go to state 87


state 66

    (19) expression -> exp . expression_prime
    (8) exp -> exp . PLUS termino
    (9) exp -> exp . MINUS termino
    (20) expression_prime -> . GREATER_THAN exp
    (21) expression_prime -> . LOWER_THAN exp
    (22) expression_prime -> . NOT_EQUAL exp
    (23) expression_prime -> . empty
    (16) empty -> .

    PLUS            shift and go to state 89
    MINUS           shift and go to state 90
    GREATER_THAN    shift and go to state 91
    LOWER_THAN      shift and go to state 92
    NOT_EQUAL       shift and go to state 93
    SEMI_COLON      reduce using rule 16 (empty -> .)
    COMMA           reduce using rule 16 (empty -> .)
    R_PARENTHESIS   reduce using rule 16 (empty -> .)

    expression_prime               shift and go to state 88
    empty                          shift and go to state 94

state 67

    (48) factor -> PLUS . ID
    (49) factor -> PLUS . cte
    (17) cte -> . CNT_INT
    (18) cte -> . CNT_FLOAT

    ID              shift and go to state 95
    CNT_INT         shift and go to state 73
    CNT_FLOAT       shift and go to state 74

    cte                            shift and go to state 96

state 68

    (10) exp -> termino .
    (11) termino -> termino . ASTERISK factor
    (12) termino -> termino . FORWARD_SLASH factor
